# routes/userRoutes.js
@@ -6,6 +6,8 @@ import { upload } from './../middlewares/uploadHandler.js';
 const router = express.Router();
 
 router.post('/signup', upload.single('photo'), authController.signup);
+router.post('/verify-email', authController.verifyEmail);
+router.post('/resend-verification', authController.resendVerificationCode);
 router.post('/login', authController.login);
 router.post('/logout', authController.logout);
 router.post('/forgot-password', authController.forgotPassword);
